Add github weblink type

--- a/src/main/resources/gitweblinktypes.properties
+++ b/src/main/resources/gitweblinktypes.properties
@@ -1,4 +1,4 @@
-types=gitweb fisheye
+types=gitweb fisheye github
 
 #---------------------------------
 # gitweb
@@ -38,3 +38,14 @@ gitwebclient.file.added=${origin}/gitwebclient/changedResource.jsp?location=/&ur
 gitwebclient.file.modified=${origin}/gitwebclient/changedResource.jsp?location=/&url=${path}&rev=${rev}&action=modify
 gitwebclient.file.replaced=${origin}/gitwebclient/changedResource.jsp?location=/&url=${path}&rev=${rev}&action=replace
 gitwebclient.file.deleted=${origin}/gitwebclient/changedResource.jsp?location=/&url=${path}&rev=${rev}&action=delete
+
+#---------------------------------
+# Github
+#---------------------------------
+github.name=Github
+github.view=http://github.com/user/repo/commit/${rev}
+github.changeset=http://github.com/user/repo/commit/${rev}
+github.file.added=http://github.com/user/repo/commit/${rev}#diff-${fileindex}
+github.file.modified=http://github.com/user/repo/commit/${rev}#diff-${fileindex}
+github.file.replaced=http://github.com/user/repo/commit/${rev}#diff-${fileindex}
+github.file.deleted=http://github.com/user/repo/commit/${rev}#diff-${fileindex}
